--- a/Hello/Hello/Base.lproj/Main.storyboard
+++ b/Hello/Hello/Base.lproj/Main.storyboard
@@ -17,7 +17,26 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Q2O-5Y-uTx">
+                                <rect key="frame" x="164" y="186" width="46" height="30"/>
+                                <state key="normal" title="Button"/>
+                            </button>
+                            <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="EyK-5D-04u">
+                                <rect key="frame" x="128" y="318" width="118" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="29" id="clu-Nt-DPj"/>
+                                </constraints>
+                            </slider>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="Q2O-5Y-uTx" firstAttribute="centerX" secondItem="EyK-5D-04u" secondAttribute="centerX" id="0aI-CJ-odW"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="EyK-5D-04u" secondAttribute="bottom" constant="320" id="Gjx-ej-uWp"/>
+                            <constraint firstItem="Q2O-5Y-uTx" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="166" id="J2p-F4-zVr"/>
+                            <constraint firstItem="EyK-5D-04u" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="130" id="k5m-Dg-6RJ"/>
+                            <constraint firstItem="Q2O-5Y-uTx" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="mfp-t8-EjL"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                 </viewController>
