--- a/SNS/SNS/Base.lproj/Main.storyboard
+++ b/SNS/SNS/Base.lproj/Main.storyboard
@@ -1,7 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" systemVersion="17A277" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -9,16 +13,47 @@
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="SNS" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Image" translatesAutoresizingMaskIntoConstraints="NO" id="dRV-PM-hBd">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                            </imageView>
+                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="gPt-YF-DSV">
+                                <rect key="frame" x="0.0" y="623" width="375" height="44"/>
+                                <items>
+                                    <barButtonItem systemItem="action" id="YHv-b7-f2f">
+                                        <connections>
+                                            <action selector="showActivityView:" destination="BYZ-38-t0r" id="wfP-Mi-UvF"/>
+                                        </connections>
+                                    </barButtonItem>
+                                </items>
+                            </toolbar>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="dRV-PM-hBd" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="8RF-Pe-pEm"/>
+                            <constraint firstItem="dRV-PM-hBd" firstAttribute="trailing" secondItem="gPt-YF-DSV" secondAttribute="trailing" id="EPt-hr-y2r"/>
+                            <constraint firstItem="dRV-PM-hBd" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="F10-FH-QXw"/>
+                            <constraint firstItem="dRV-PM-hBd" firstAttribute="leading" secondItem="gPt-YF-DSV" secondAttribute="leading" id="GxN-n2-GXG"/>
+                            <constraint firstItem="dRV-PM-hBd" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="lY9-4r-tz0"/>
+                            <constraint firstItem="gPt-YF-DSV" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="rVK-qN-6hp"/>
+                            <constraint firstAttribute="trailing" secondItem="dRV-PM-hBd" secondAttribute="trailing" id="wOM-ne-1pc"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <connections>
+                        <outlet property="imageView" destination="dRV-PM-hBd" id="tw0-Kh-iBm"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="117.59999999999999" y="118.29085457271366"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="Image" width="682" height="1021"/>
+    </resources>
 </document>
