--- a/NewsReader/NewsReader/Base.lproj/Main.storyboard
+++ b/NewsReader/NewsReader/Base.lproj/Main.storyboard
@@ -1,15 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="zyq-zn-Yfx">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="n02-Y4-7JA">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
+        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--List View Controller-->
+        <!--一覧-->
         <scene sceneID="C24-WH-jzZ">
             <objects>
                 <tableViewController id="zyq-zn-Yfx" customClass="ListViewController" customModule="NewsReader" customModuleProvider="target" sceneMemberID="viewController">
@@ -34,6 +35,9 @@
                                         </label>
                                     </subviews>
                                 </tableViewCellContentView>
+                                <connections>
+                                    <segue destination="aJb-AN-ahp" kind="show" id="Eeu-sd-p1H"/>
+                                </connections>
                             </tableViewCell>
                         </prototypes>
                         <connections>
@@ -41,10 +45,63 @@
                             <outlet property="delegate" destination="zyq-zn-Yfx" id="sCo-5J-j9S"/>
                         </connections>
                     </tableView>
+                    <navigationItem key="navigationItem" title="一覧" id="BVt-iC-6l4"/>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ch7-Ly-N62" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-57" y="134"/>
+            <point key="canvasLocation" x="788" y="133"/>
+        </scene>
+        <!--Detail View Controller-->
+        <scene sceneID="185-78-53u">
+            <objects>
+                <viewController id="aJb-AN-ahp" customClass="DetailViewController" customModule="NewsReader" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="mUH-ZZ-GtO">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <wkWebView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="egq-zA-98k">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                                <color key="backgroundColor" red="0.36078431370000003" green="0.38823529410000002" blue="0.4039215686" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <wkWebViewConfiguration key="configuration">
+                                    <audiovisualMediaTypes key="mediaTypesRequiringUserActionForPlayback" none="YES"/>
+                                    <wkPreferences key="preferences"/>
+                                </wkWebViewConfiguration>
+                            </wkWebView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="egq-zA-98k" firstAttribute="bottom" secondItem="omx-Cb-xwr" secondAttribute="bottom" id="1dM-49-BPS"/>
+                            <constraint firstItem="egq-zA-98k" firstAttribute="leading" secondItem="mUH-ZZ-GtO" secondAttribute="leading" id="WnM-pS-x7T"/>
+                            <constraint firstItem="egq-zA-98k" firstAttribute="top" secondItem="mUH-ZZ-GtO" secondAttribute="top" id="lDN-mq-J4X"/>
+                            <constraint firstAttribute="trailing" secondItem="egq-zA-98k" secondAttribute="trailing" id="wX2-q0-Xz8"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="omx-Cb-xwr"/>
+                    </view>
+                    <connections>
+                        <outlet property="webView" destination="egq-zA-98k" id="ms1-he-CRJ"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="9WA-xq-dQc" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1621.5999999999999" y="132.68365817091455"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="Y56-nW-i6T">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="n02-Y4-7JA" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="qjj-05-fpT">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="zyq-zn-Yfx" kind="relationship" relationship="rootViewController" id="2lE-9N-yV9"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="32k-cK-i4o" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-57.600000000000001" y="133.13343328335833"/>
         </scene>
     </scenes>
 </document>
